--- a/guard_weblayer/src/main/resources/velocity/mail.properties
+++ b/guard_weblayer/src/main/resources/velocity/mail.properties
@@ -1,8 +1,8 @@
 mail.host=smtp.gmail.com
 mail.port=587
 mail.protocol= smtps
-mail.username=j10mehdig@gmail.com
-mail.password=golestan42
+mail.username=**********
+mail.password=**********
 mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
