--- a/guard_weblayer/src/main/resources/mymessages.properties
+++ b/guard_weblayer/src/main/resources/mymessages.properties
@@ -16,8 +16,8 @@ error.username.too.short=Your username is too short.
 mail.host=smtp.gmail.com
 mail.port=465
 mail.protocol= smtps
-mail.username=j10mehdig@gmail.com
-mail.password=golestan42
+mail.username=********
+mail.password=********
 mail.transport.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
